working on three pages layout issues

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,27 +1,12 @@
 body {
-    font-family: Arial;
+    
     margin-bottom: 500px;
     background-color: #D8D8D8;
+    background-position: center;
     
 }
 
-/* @media (max-width: 992px) {
-    .aprilimg {
-        width: 50% !important;
-    }
-}
 
-@media (max-width: 768px) {
-    .aprilimg {
-        width: 50% !important;
-    }
-}
-
-@media (max-width: 576px) {
-    .aprilimg {
-        width: 50% !important;
-    }
-} */
 
 .navbar {
 
@@ -54,15 +39,14 @@ h1{
 font-family: "Libre Baskerville",
 serif;
  color: #66188B;
- margin-top: 35px;
+ margin-top: 0;
  text-align: center;
+ margin-bottom:30px;
 
 }
 
 /* h2:hover {
     background-color: darkkhaki;
-
-
 
 } */
 
@@ -81,7 +65,7 @@ h3 {
     
     text-align:center;
     
-    margin-top: -70px;
+    margin-top: -140px;
     margin-left: -30px;
     
 }
@@ -96,27 +80,98 @@ h3 {
 
 }
 
-.bowtielink {
 
-
- 
-
-
-}
-img{
+/* img {
 margin-top: 100px;
  width: 450px;
  border-radius: 50%;
- margin-left: 50%;
 
-}
+} */
 
-.img-fluid {
+
+/* .img-fluid {
     max-width: 100%;
     height: 700px;
+ 
+    
+} */
+
+#portraitimg {
+margin-top: 100px;
+width: 450px;
+border-radius: 50%;
+height: 700px;
+
+}
+#reddoorimg{
+
+margin-top: 100px;
+width: 450px;
+border-radius: 50%;
+height: 700px;
+
 }
 
+#stickimg{
+margin-top: 100px;
+width: 450px;
+border-radius: 50%;
+height: 700px;
 
+
+}
+#accidentimg{
+width:100%;
+height:290px;
+border-radius:10px;
+margin-top: 15px;
+
+}
+
+#readnewspaperimg{
+width:100%;
+height:290px;
+border-radius:10px;
+margin-top: 15px;
+
+
+}
+
+#hatimg{
+width:50%;
+height:290px;
+border-radius:10px;
+margin-top: 15px;
+
+
+}
+#bowtieimg{
+width:50%;
+height:550px;
+border-radius:10px;
+margin-top: 15px;
+}
+
+#moviesimg {
+width:50%;
+height:290px;
+border-radius:10px;
+margin-top: 15px;
+}
+
+.bio {
+text-align: left;
+font-size:medium;
+ font-family: Arial;
+font-weight: bold;
+
+}
+
+.p2 {
+    margin-top: 7px;
+    margin-bottom: 7px;
+    font-family: Arial;
+}
 
 
 
@@ -157,18 +212,7 @@ footer {
     serif;
 
 }
-.fab{
 
-font-size: 500px;
-
-
-}
-.fas {
-
-    font-size: 500px;
-   
-
-}
 .svg{
 
 margin:auto;
@@ -178,16 +222,12 @@ margin-top: -60px;
 
 
 }
-.facebook{
-    font-size: 10px;
 
 
 
-}
-
-/* .button{
-
-font-size: 100px;
 
 
-} */
+
+
+
+
